# nodecare_tauri

./: index.html  package copy.json  package-lock.json  package.json  test.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main copy.rs  main.rs
